--- a/Assessment Tasks/2023 T1/11.2P Company Handover.md
+++ b/Assessment Tasks/2023 T1/11.2P Company Handover.md
@@ -290,7 +290,7 @@ Note, login credentials and administration rights for these accounts have been p
 | **Viola Cherotich Meli** | 221187491 | Postgrad | Senior | Data Science |  |conducted research on EV, in melbourne, my user story was on determining the wait time per charging station, in the first sprint I have been able to use the already collected dataset since i found most of them that were collected last trimester more suitable for my case..I did alot of data cleaning and EDA using python and uploaded a comprehensive document on the same. In this second sprint am working on implementing machine learning models that would be used on predicting the wait time.In the last sprint i worked on improving the clustering algorithm in that aspect i implemented random forest. which is one of the supervised machine learning algorithms.|
 | **Chaoyi (Barry) Chen** | 220358865 | Postgrad | Junior | Web Dev, Project | Yes |I have co-hosted weekly team meeting and written minutes, assisted on broken down user stories into actionable Trello card items, organise and properly setup Trello board, reviewed and organised GitHub resources, managed GitHub pull requests, facilitate team communication and operation. I developed AI Models and Research webpages using React framework with added functionality such as search bar. I have reviewed and provided summary report of all data analysis and AI/ML models related to the project, improved EVCS density clustering ML model and created dedicated webpage for this ML model.|
 | **Ishika Khanna** | 219551957 | Undergrad | Junior | Web Dev | Yes |  |
-| **Arnold Prabudda Kalpesh Mendis** | 222330109 | Undergrad | Junior | Web Dev |  |As an active member of the web dev team, I have prepared several user stories such as a chatbot and a submission form that will help to achieve a better outcome through our EVCFLO website. Furthermore, I have fully developed a user submission form using React JS frontend technology, which helps us to insert records into our company database regarding the required EV charging stations in specific areas.|
+| **Arnold Prabudda Kalpesh Mendis** | 222330109 | Undergrad | Junior | Web Dev |  |As an active member of the web dev team, I have prepared several user stories such as a chatbot and a submission form that will help to achieve a better outcome through our EVCFLO website. Furthermore, I have fully developed a user submission form using React JS frontend technology, which helps us to insert records into our company database regarding the required EV charging stations in specific areas. I've developed react JS the Home Page and other pages according to the new prototype guidelines.finally, i have developed the login page as well.|
 | **Mark Justin Premier** | 222115089 | Postgrad | Junior | Web Dev |  |Being a member of the frontend web dev team, I implemented the React framework to create a new and more functional frontend of the website, and migrated across most of the work from the previous website into the new website. I've also been helping other team members understand the React framework, so we all can contribute.|
 | **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Junior | Web Dev |  | I created a webpage containing details of the different electric chargers offered by the company, The different products are suitable for different users. I created the webpage using react and I uploaded the same to GITHUB.I am now creating webpages containing different products and their installation suitable for different areas like workplaces, retail markets etc.|
 | **Yousef Almulla** | 221410734 | UnderGraduate | Junior | Web dev| | I have used react js as the frontend for creating the website. As we know react js is an open source language which uses js library which provides a user friendly environment for creating webpages. I have created News webpage, EV Charge(Partners) and Contact Us webpages . For this web development I used a System Development Life Cycle for e-commerce where first I planned and analysed what all things needed for the website like problem solving. I have done lots of researches on designing the webpages, like first I will draw the design and then if it suits the website then I will put the design into implementation. The designing phase was like creating a webpage out my creativity. I also had good team communications where i attended most of the team meetings and collaborated with my team mates.i ensured that my work has to be a high quality work to suit the efforts of the team. I attended most of the weekly classes to catchup with any updates.|
