--- a/Assessment Tasks/2023 T1/11.2P Company Handover.md
+++ b/Assessment Tasks/2023 T1/11.2P Company Handover.md
@@ -179,8 +179,8 @@ Along with moving each of the Chameleon projects forward, closer to their overal
 ### Completed Goals & Objectives 
 Chameleon is happy to report the successful completion of the following goals and objectives for the trimester. 
 
-- Documented a policy for creating and storing documents with a focus on storing and managing key company documents on GitHub. Re-created a number of key documents in markdown adding them to the updated [document repository](https://github.com/Chameleon-company/Chameleon-Documents).
-- Documented the [best practice policy](https://github.com/Chameleon-company/Chameleon-Documents/blob/462c0459425ae67e6b269beed852d6089962d7f2/Chameleon%20Policies%20and%20Guides/GitHub%20Repository%20Use%20Policy.md) for the use of the company’s GitHub repository, also a how to [prepare the repository](https://github.com/Chameleon-company/LeadershipTeam/blob/f8b8d97fcf5018f07fdc27ab9428d0df832da66d/Leadership%20Tools/Trimester%20Wind%20Down.md) for handover at the end of the trimester. 
+- Documented a policy for creating and storing documents with a focus on storing and managing key company documents on GitHub. Re-created a number of key documents in markdown adding them to the updated document repository.
+- Documented the best practice policy for the use of the company’s GitHub repository, also a how to for handover at the end of the trimester. 
 - Documented a procedure for the overall handover process for the company making it seamless for future students to take the lead. This involves:
     - Centralising credentials and resources used throughout the company.
     - Have multiple junior students (who are on lead) brought into the handover process across all projects so that the knowledge does not sit with one team, project or person.
