--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -122,10 +122,10 @@ The Chameleon Website aims to accumulate all the information about the Chameleon
 
 **Acting Director:** Azadeh Ghari Neiat.
 
-**Company Board:** Azadeh Ghari Neiat,Jon Suwannakoot, Barry Chen,Yesini Charithma Liyanage,Jordan Sam Cook.
+**Company Board:** Azadeh Ghari Neiat,Jon Suwannakoot, Barry Chen, Yesini Charithma Liyanage, Jordan Sam Cooke.
 
 <h4 style="color:#336699; text-align:left;">EV Adoption Tools</h4>
-<b>Group Project Lead:</b> Yesini Charithma Liyanage & Jordan Sam Cook
+<b>Group Project Lead:</b> Yesini Charithma Liyanage & Jordan Sam Cooke
 
 EV Charger Forecasting & Location Optimisation (_sub project 1)_
 - Sub Project Lead: Yesini Charithma Liyanage
@@ -133,7 +133,7 @@ EV Charger Forecasting & Location Optimisation (_sub project 1)_
 - Data Science Lead: Mark Premier
 
 Evoleon Mobile Application (_sub project 2_)
-- Sub Project Lead: Jordan Sam Cook
+- Sub Project Lead: Jordan Sam Cooke
 - App Dev Lead: Aanan Abdullah & Joel Murphy-Dyer
 
 
@@ -234,13 +234,14 @@ Convert the old HTML/CSS website to new website that using React framework and a
 ### <a name="evm"></a>Evoleon Mobile Application
 
 #### Overview
-The Evoleon App will help EV owners better plan their trips by identifying optimal EV charging stations as waypoints on their journey and provide them relevant information about those charging stations. 
+The Evoleon app strives to provide owners of Electric Vehicles (EVs) with tools to assist in planning their travels by utilising the user-friendly application and charging station data to determine the most efficient route. 
 
 #### Goals & Objectives
-The goal of this project is to be able to design and implement a mobile app (Android and IOS) to help consumers identify nearby charging locations. Although there are existing products that are similar, here are a few examples of what the app may offer in addition to the core function of locating a socket: 
-- Providing additional information and filtering of stations based on type (EV vs hydrogen, for example), information on the source of the power (direct solar, grid powered, gas, diesel etc).
-- Providing a full journey planner for longer trips that optimizes for reducing charge time, cost and environmental impact along the route. 
-- Ability to incorporate your usage data with current fuel prices, cost of maintenance etc and provide an indication of real savings for running the vehicle. 
+The Evoleon app is an application-based (Android and IOS) solution for finding EV charging stations based on criteria entered by a user. While not unique, the Evoleon app strives to be the best solution on the market by offering features to make it a more rounded product experience; these features include:  
+- The use of filtering certain charging stations based on different types of EV fuel sources (Hydrogen and Electricity) and other amenities such as cinemas, restaurants and hairdressers. 
+- Utilise a journey planner to create a more effective route for users traveling from point A to B to reduce the time taken and environmental impact to reach their intended destination. 
+- Calculating the cost of users driving their EVs compared to traditional combustion cars provides an overview of actual savings running an EV. 
+- A clean and intuitive interface can be utalised by any user who downloads the app. 
 
 
 #### Aims this Trimester
@@ -264,15 +265,14 @@ The aim this trimester is to continue implementing the designs created by previo
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** |
 | :-- | :-- | :-: | :-: | :-: | :-: |
-| **Mick Wiedermann** | 222058299 | Undergrad | Senior | App Dev, Project | Yes |
-| **Joel Murphy-Dyer** | 221081809 | Undergrad | Junior | App Dev, Project | Yes | 
-| **Jordan Sam Cooke** | 220208777 | Undergrad | Junior | App Dev |Co.|
+| **Jordan Sam Cooke** | 220208777 | Undergrad | Senior | App Dev, Project |Yes.|
+| **Aanan Abdullah** | 220499062 | Undergrad | Senior | App Dev | Yes | 
+| **Joel Murphy-Dyer** | 221081809 | Undergrad | Senior | App Dev | Co. | 
+| **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Senior | App Dev |  |
+| **Wei Liang Tiew** | 220427347 | Undergrad | Senior | App Dev, Design |  |
 | **Kanishk Rajvanshi** | 222486026 | Postgrad | Junior | App Dev |  |
 | **Khanh Nguyen Nguyen** | 221393506 | Undergrad | Junior | App Dev |  |   |
 | **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Junior | App Dev |  |
-| **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Junior | App Dev |  |
-| **Wei Liang Tiew** | 220427347 | Undergrad | Junior | App Dev, Design |  |
-| **Aanan Abdullah** | 220499062 | Undergrad | Junior | App Dev | Yes | 
 | **Asher Lam** | 221254112 | Undergrad | Junior | Web Dev |  |
 
 
