Update Changes 2_1P MOP Cyber security.md

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -293,8 +293,8 @@ The initial main focus is to read the documentation for the new API for the Melb
 
 The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to complete a full set of use cases, and also have enough in the backlog for the next trimester when students will be focussed on InnoFes.
 
-The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will also be scrutinising all apsects of our public-facing site to look for areas of vunerabilities that will need to be rectified.
-The other main focus for the leadership is to document and streamline the way that the project is documented for handover at the end of each trimester.
+The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will be conducting tests and an audit, not only the MOP project but also throughout the whole of Chameleon to ensure that no division has dropped the ball when it comes to security, all tests will be reported and if there any major issues detected within any of the projects the leader(s) in charge will know so they can guide their team into ensuring the best practices are being implemented.
+
 
 
 #### Deliverables
@@ -316,32 +316,35 @@ The other main focus for the leadership is to document and streamline the way th
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | 
 | :-- | :-- | :-: | :-: | :-: | :-: |
-| **Angie Hollingworth** | 222053804 | Undergrad | Senior | Data Science, Security, Board | Yes | 
-| **Abhishek Bajaj** | 221034312 | Undergrad | Junior | Data Science | Yes | 
-| **Vaibhav Kashyap** | 220641102 | Undergrad | Junior | Data Science | Yes | 
-| **Vinit Karunakar Shetty** | 221426969 | Undergrad | Senior | Data Science | Yes |  |
-| **Kruthi Shetty** | 222067974 | Postgrad | Junior | Data Science |  |  |
-| **Keefe Euler Alpay** | 221243463 | Undergrad | Junior | Data Science |  |  |
-| **Nathan Graham Clee** | 221255235 | Undergrad | Junior | Data Science |  | 
-| **Shanuk Julian Devamulla** | 221159324 | Undergrad | Junior | Data Science |  |  
-| **Siyu Ai** | 223008124 | Postgrad | Junior | Data Science |  | 
-| **Steven Nguyen** | 222337088 | Undergrad | Junior | Data Science |  | 
-| **Adam James Bullivant** | 219274937 | Undergrad | Senior | Data Science |  | 
-| **Andrew Tilling** | 220554762 | Postgrad | Senior | Data Science |  | 
-| **Tuan Minh Vu** | 219595908 | Undergrad | Senior | Data Science |  | 
-| **Amy Tran** | 213358131 | Undergrad | Junior | Data Science | | 
-| **Tate Remzi-Johnson** | 221484111 | Undergrad | Senior | Dev Team | Yes | 
-| **Jiahao Pan** | 218562599 | Postgrad | Junior | Dev Team |  | 
-| **Mihili Isurika Geeganage Geeganagama Arachchige** | 222398483 | Undergrad | Junior | Dev Team |  | 
-| **Roshan Jose** | 221499484 | Postgrad | Junior | Dev Team |  |
-| **Syed Kareemullah** | 220462373 | Undergrad | Junior | Dev Team |  | 
-| **Muhammed Nihal** | 221461233 | Postgrad | Junior | Dev Team |  | 
-| **Matthew Hall** | 220236048 | Undergrad | Senior | Dev Team |  | 
-| **Pramodya Sathsarani Senanayaka Jayasundara Senanayaka** | 221308586 | Postgrad | Senior | Dev Team |  |  |
-| **Sharini Mahisha De Mel** | 217425821 | Undergrad | Senior | Dev Team |  | 
-| **Izaz Ishaque** | 221005704 | Undergrad | Junior | Cyber Security | Yes |  
-| **Lucas Kocon** | 218510242 | Undergrad | Junior | Cyber Security |  |  
-| **Zachary Max Kein** | 220277143 | Undergrad | Junior | Cyber Security |  |
+| **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | Data Science, Security, Board, MOP Project Lead | Yes | 
+| **Mollie Fernandez** | 217285498 | Postgrad | Junior | Data Science | Yes | 
+| **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | 
+| **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
+| **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes |  |
+| **Yash Krupanand Daware** | S222482648 | Postgrad | Junior | Data Science |  |  |
+| **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  | 
+| **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science |  |
+| **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science |  |
+| **Siyu Ai** | 223008124 | Postgrad | Senior | Dev Team|  | 
+| **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  | 
+| **Prathibha Kandawala** | 222440671 | Undergrad | Senior | Data Science |  | 
+| **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  | 
+| **Siju Deng** | s222376251 | Postgrad | Senior | Data Science |  | 
+| **Amy Tran** | 213358131 | Undergrad | Senior | Data Science | | 
+| **Matheesha Nirvan Palliyaguruge Geeganagama Arachige** | 222506155 | Undergrad | Junior | Dev Team |  | 
+| **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team |  | 
+| **Mihili Isurika Geeganage Geeganagama Arachchige** | 222398483 | Undergrad | Senior | Dev Team |  | 
+| **Roshan Jose** | 221499484 | Postgrad | Senior | Dev Team |  |
+| **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | 
+| **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | 
+| **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | 
+| **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
+| **Mariam Kassar** | 220234902 | Undergrad | Senior | Cyber Security |  | 
+| **Izaz Ishaque** | 221005704 | Postgrad | Senior | Cyber Security | Yes |  
+| **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  |  
+| **Zachary Max Kein** | 220277143 | Undergrad | Senior | Cyber Security |  |
+| **Antony Raju** | 221471405 | Postgrad | Senior | Cyber Security |  |
+
 
 
 ## <a name="cham"></a><h2 style="color:#336699">Chameleon Website</h2>
