--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -245,16 +245,16 @@ The Evoleon app is an application-based (Android and IOS) solution for finding E
 
 
 #### Aims this Trimester
-The aim this trimester is to continue implementing the designs created by previous teams and increase the applications functionality. A basic version of the app is currently working but it only has a few screens implemented and the functionality is very limited. Furthermore, the team aims to implement policies for shared coding practices to provide future teams with detailed references.
+Through the development life cycle of the Evoleon application, a high-fidelity prototype has been produced. Following the recommendations outlined last trimester, the team is looking to finalise the new EVAT colour scheme bringing the application more in-line with other products produced by EVAT. By the end of the trimester, the Evoleon app dev team wants to be able to set forward their vision for the Evoleon application. 
 
 #### Deliverables
-- Work on adding real EV Location data into the new Firestore locations database.
-- Create a Navigation System for the applications map to travel to a selected EV Charger.
-- Add an option to filter EV chargers on the map based on amenities stored in database for that EV charging location.
-- Move the hamburger menu from the top left of the screen to a menu at the bottom of the screen, similar to the Figma designs.
-- Complete a cyber security review of the app’s authentication process, data storage, code in GitHub repository, and apps terms and conditions.
-- Add the process to reset a user’s password or delete an account.
-- Continue adding user interface code for the applications pages.
+- Improve the existing navigation system, allowing the routing to be in the app instead of sending users to Google Maps. 
+- Change hardcoded colour values to dynamic variables so the application's color scheme can be changed efficiently and effectively in case of a branding update. 
+- Add an option to filter EV chargers on the map based on amenities stored in the database for that EV charging location.
+- Move the hamburger menu from the top left of the screen to a menu at the bottom, similar to the Figma designs.
+- Research and conduct a security audit of the application and its backend services to determine if there are any severe risks to users and their data. 
+- Continue to expand and improve the application interface, making it more user-friendly. 
+
 
 
 <br>
@@ -270,10 +270,11 @@ The aim this trimester is to continue implementing the designs created by previo
 | **Joel Murphy-Dyer** | 221081809 | Undergrad | Senior | App Dev | Co. | 
 | **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Senior | App Dev |  |
 | **Wei Liang Tiew** | 220427347 | Undergrad | Senior | App Dev, Design |  |
-| **Kanishk Rajvanshi** | 222486026 | Postgrad | Junior | App Dev |  |
-| **Khanh Nguyen Nguyen** | 221393506 | Undergrad | Junior | App Dev |  |   |
-| **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Junior | App Dev |  |
-| **Asher Lam** | 221254112 | Undergrad | Junior | Web Dev |  |
+| **Asher Lam** | 221254112 | Undergrad | Senior | Web Dev |  |
+| **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Senior | App Dev |  |
+| **Daniel D'Amore** | 221240956 | Undergrad | Junior | App Dev |  |
+| **Ambre Sarrazin** | 220321559 | Undergrad | Junior | Security |  |
+| **Xing Shuodong** |  | Undergrad | Junior | App Dev |  |
 
 
 
