Updated student details

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -274,7 +274,7 @@ Through the development life cycle of the Evoleon application, a high-fidelity p
 | **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Senior | App Dev |  |
 | **Daniel D'Amore** | 221240956 | Undergrad | Junior | App Dev |  |
 | **Ambre Sarrazin** | 220321559 | Undergrad | Junior | Security |  |
-| **Xing Shuodong** |  | Undergrad | Junior | App Dev |  |
+| **Shuodong Xing** | 219368407 | Undergrad | Junior | App Dev |  |
 
 
 
