Update 2.1P Chameleon T2_2023.md
Main company section updated, City of Melbourne Project updated and Students list up to date. Overall proof read and spell check

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -113,41 +113,41 @@ Both EVAT and MOP leverage datasets from several sources including data generate
 The EV Adoption Tools division currently has two projects underway. The first is a mobile application to help EV drivers locate and navigate to charging stations that meet the needs of their vehicles. The second uses big data to analyse the density of EV ownership, main transport routes (amongst other things) and recommends optimal locations for new EV Charging stations. 
 
 <h4 style="color:#336699; text-align:left;">MOP</h4>
-The City of Melbourne Open data division has been engaged with Melbourne City to support greater use of their Open Data library by businesses, researchers, and software developers. MOP delivers an educational portal that demonstrates how to leverage Open Data using real-world scenarios which helps Melbourne City achieve one of their key strategic goals.
+The City of Melbourne Open Data Project engages with The City of Melbourne to support a greater use of their Open Data library for businesses, researchers, and software developers. The Melbourne Open Playground (MOP) is an educational portal that demonstrates how to leverage open data using real-world scenarios in order to assist The City of Melbourne to achieve key strategic goals.
 
 <h4 style="color:#336699; text-align:left;">CW</h4>
-The Chameleon Website aims to accumulate all the information about the Chameleon company overall to present in a format that is pleasantly designed, laid out, easy to navigate and useful components to display the progress of all 3 projects while outlining their goals. Which aims to provide a one-stop portal to different links and sub-projects within the company.
+The Chameleon Website aims to accumulate all the information about the Chameleon company and present it in a format that is pleasantly designed, laid out, easy to navigate and displays the progress of each of its three projects and outlines their goals. This project aims to provide a one-stop portal to different links and sub-projects within the company.
 
 <a name="leadership-team"></a><h1 style="color:#336699">Leadership Team</h1>
 
 **Acting Director:** Azadeh Ghari Neiat.
 
-**Company Board:** Azadeh Ghari Neiat,Jon Suwannakoot, Barry Chen,Yesini Charithma Liyanage,Jordan Sam Cook.
+**Company Board:** Azadeh Ghari Neiat, Jon Suwannakoot, Barry Chen, Yesini Charithma Liyanage, Jordan Sam Cook, Mollie Fernandez.
 
 <h4 style="color:#336699; text-align:left;">EV Adoption Tools</h4>
-<b>Group Project Lead:</b> Yesini Charithma Liyanage & Jordan Sam Cook
+<b>Project Leads:</b> Yesini Charithma Liyanage & Jordan Sam Cook
 
-EV Charger Forecasting & Location Optimisation (_sub project 1)_
+<h5> EV Charger Forecasting & Location Optimisation (_sub project 1)_ </h5>
 - Sub Project Lead: Yesini Charithma Liyanage
 - Web Dev Lead: Jamie Connor Davidson
 - Data Science Lead: Mark Premier
 
-Evoleon Mobile Application (_sub project 2_)
+<h5> Evoleon Mobile Application (_sub project 2_) </h5>
 - Sub Project Lead: Jordan Sam Cook
 - App Dev Lead: Aanan Abdullah & Joel Murphy-Dyer
 
 
-<h4 style="color:#336699; text-align:left;">Melbourne Open Data</h4>
-<b>Project Lead:</b> Barry Chen & Mollie Fernandez
+<h4 style="color:#336699; text-align:left;">Melbourne Open Data Project</h4>
+<b>Project Leads:</b> Barry Chen & Mollie Fernandez
 
 - Data Science Leads: Vaibhav Kashyap, SimranJit Singh, Yash Krupanand Daware, Keefe Euler Alpay
 - Web Development Lead: Jiahao Pen
-- Security Team Lead: Izaz Ishaque & Amby Sarrazin
+- Security Team Leads: Izaz Ishaque & Amby Sarrazin
 
 <h4 style="color:#336699; text-align:left;">Chameleon Website</h4>
 <b>Project Lead:</b> Jon Suwannakoot
 
-- Web Development Lead: Davinderjit Singh,AYUSH KUMAR Som,Aaron Vandersluys
+- Web Development Lead: Davinderjit Singh, AYUSH KUMAR Som, Aaron Vandersluys
 - Design Team Lead: Jon Suwannakoot
 - Assistant Design Lead: Brodie McCann
 
@@ -161,17 +161,17 @@ Evoleon Mobile Application (_sub project 2_)
 
 # <a name="tri-goals"></a><h1 style="color:#336699">Trimester Goals & Objectives</h1>
 
-### <a name="objectives"></a>T1-2023 Objectives
-Along with moving each of the Chameleon projects forward, closer to their overall goals, we have identified the following areas for improvement this trimester.
+### <a name="objectives"></a>Trimester 2 2023 Objectives
+As well as moving each of the Chameleon projects closer to their overall goals, we have identified the following areas for improvement this trimester.
 
-- Document a policy for creating and storing documents with a focus on storing and managing key company documents on GitHub. Once created, migrating company documents to GitHub converting them to markdown in the process.
+- Create and document a policy for the creation and storage of documents with a focus on storing and managing key company documents on GitHub. The process will include, migrating company documents to GitHub and converting them to markdown in the process.
 - Document the best practice policy for the maintenance of the company’s GitHub repository, this is to include how to prepare the repository for handover at the end of the trimester. 
-- Document a policy and procedure for the overall handover process for the company making it seamless for future students to take the lead. This involves:
+- Document a policy and procedure for the overall handover process for the company making it seamless for future studentsb fvc. This involves:
     - Centralising credentials and resources used throughout the company.
-    - Have multiple junior students (who are on lead) brought into the handover process across all projects so that the knowledge does not sit with one team, project or person.
-- Introduce cross-collaboration across all projects within the company
+    - Have multiple junior students brought into the handover process across all projects so that the knowledge does not sit with one team, project or person.
+- Introduce cross-collaboration across all projects within the company including:
     - Sharing teams such as design & security
-    - Have multiple cross-company meetings to get all team members (especially the juniors) familiar with the company as a whole.
+    - Having multiple cross-company meetings to get all team members (especially the juniors) familiar with the company as a whole.
     - Share wins, roadblocks, resources and topics across similar teams from other projects.
 - Introduce and document Cyber Security best practices, and stress tests across all projects. This will introduce future tasks that the web development teams can complete.
 - Implement a Design plan across all projects that details the colour scheme to layouts to high-fidelity quality produced wireframes with quality prototyping. 
@@ -222,12 +222,12 @@ Convert the old HTML/CSS website to new website that using React framework and a
 | **Jamie Connor Davidson** | 222356461 | Postgrad | Junior | Data Science |  |
 | **Siqin Chen** | 221115918 | Postgrad | Senior | Data Science |  |
 | **Viola Cherotich Meli** | 221187491 | Postgrad | Senior | Data Science |  |
-| **Chaoyi (Barry) Chen** | 220358865 | Postgrad | Junior | Web Dev, Project | Yes | |
 | **Ishika Khanna** | 219551957 | Undergrad | Junior | Web Dev | Yes |  |
+| **Yesini Charithma Liyanage** | 222063923 | Undergrad | Junior | Web Dev | Yes |
 | **Arnold Prabudda Kalpesh Mendis** | 222330109 | Undergrad | Junior | Web Dev |  |
 | **Mark Justin Premier** | 222115089 | Postgrad | Senior | Web Dev |  |
 | **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Junior | Web Dev |  | 
-| **Yesini Charithma Liyanage** | 222063923 | Undergrad | Junior | Web Dev | Yes |
+
 
 
 ### <a name="evm"></a>Evoleon Mobile Application
@@ -263,14 +263,14 @@ The aim this trimester is to continue implementing the designs created by previo
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** |
 | :-- | :-- | :-: | :-: | :-: | :-: |
-| **Joel Murphy-Dyer** | 221081809 | Undergrad | Junior | App Dev, Project | Yes | 
+| **Joel Murphy-Dyer** | 221081809 | Undergrad | Junior | Project Lead | Yes | 
 | **Jordan Sam Cooke** | 220208777 | Undergrad | Junior | App Dev |Co.|
+| **Aanan Abdullah** | 220499062 | Undergrad | Junior | App Dev | Co. | 
 | **Kanishk Rajvanshi** | 222486026 | Postgrad | Junior | App Dev |  |
 | **Khanh Nguyen Nguyen** | 221393506 | Undergrad | Junior | App Dev |  |   |
 | **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Junior | App Dev |  |
 | **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Junior | App Dev |  |
 | **Wei Liang Tiew** | 220427347 | Undergrad | Junior | App Dev, Design |  |
-| **Aanan Abdullah** | 220499062 | Undergrad | Junior | App Dev | Yes | 
 | **Asher Lam** | 221254112 | Undergrad | Junior | Web Dev |  |
 
 
@@ -289,35 +289,36 @@ The long-term goal is to data useage, facilitating innovative and informed solut
 
 #### Aims this Trimester
 
-The initial main focus is to read the documentation for the new API for the Melbourne Open Data Playground, and systematically work through each published (and yet to be published) notebooks and modify the code so that they will run if downloaded.
+The initial main focus is to understand the documentation for the project's new API and systematically work through each published (and yet to be published) notebooks and modify the code so that they will run if downloaded.
 
-The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to complete a full set of use cases, and also have enough in the backlog for the next trimester when students will be focussed on InnoFes.
+The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to complete a full set of use cases.
 
-The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will be conducting tests and an audit, not only the MOP project but also throughout the whole of Chameleon to ensure that no division has dropped the ball when it comes to security, all tests will be reported and if there any major issues detected within any of the projects the leader(s) in charge will know so they can guide their team into ensuring the best practices are being implemented.
+The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will be conducting tests and an audit, not only for the City of Melbourne Project project but also throughout the whole of Chameleon to ensure that all projects are up to par when it comes to security, all tests will be reported and if there any major issues detected within any of the projects the securiity team will ensure the best practices are being implemented.
 
 
 
 #### Deliverables
 
-- Update the API on all published notebooks (ready to be published again), and notebooks ready for publishing.
-- Implement a human-readable URL
-- Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigatethem
-- Implement mobile views for the website
-- Complete analysis on multiple use cases (ready for publishing)
-- Create multiple new use cases, allowing enough in the backlog for the next trimester
-- Publish notebooks that are ready to be published
-- Cleaner resources for the handover procedures for MOP
-- Add more functionality to the website
+- Update the API on all published notebooks and notebooks ready for publishing.
+- Implement a human-readable URL.
+- Identify vulnerabilities in the source code and python code.
+- Document a road map to mitigate these vulnerabiliities. 
+- Implement mobile views for the website.
+- Complete analysis on multiple use cases (ready for publishing).
+- Create multiple new use cases, ensureing there is enough in the backlog for the next trimester.
+- Publish notebooks that are ready to be published.
+- Ensure resources for the handover procedures are clear 
+- include mroe functionalitiies within the website
 - Implement some interactivity with JavaScript
-- Fix the lingering deisgn / css issues within the website
+- Fix any lingering deisgn and CSS issues within the website
  
 
 #### Project Members
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | 
 | :-- | :-- | :-: | :-: | :-: | :-: |
-| **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | Data Science, Security, Board, MOP Project Lead | Yes | 
-| **Mollie Fernandez** | 217285498 | Postgrad | Junior | Data Science | Yes | 
+| **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | MOP Project Co-Lead | Yes | 
+| **Mollie Fernandez** | 217285498 | Postgrad | Junior | MOP Project Co-Lead | Yes | 
 | **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | 
 | **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
 | **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes |  |
@@ -325,25 +326,29 @@ The web team is aiming to further streamline the processes for which the noteboo
 | **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  | 
 | **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science |  |
 | **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science |  |
-| **Siyu Ai** | 223008124 | Postgrad | Senior | Dev Team|  | 
 | **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  | 
 | **Prathibha Kandawala** | 222440671 | Undergrad | Senior | Data Science |  | 
 | **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  | 
+| **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science |  | 
 | **Siju Deng** | s222376251 | Postgrad | Senior | Data Science |  | 
 | **Amy Tran** | 213358131 | Undergrad | Senior | Data Science | | 
+
+| **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team | Yes | 
+| **Yashika Arora** | 222506155 | Undergrad | Junior | Dev Team | Yes |
 | **Matheesha Nirvan Palliyaguruge Geeganagama Arachige** | 222506155 | Undergrad | Junior | Dev Team |  | 
-| **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team |  | 
 | **Mihili Isurika Geeganage Geeganagama Arachchige** | 222398483 | Undergrad | Senior | Dev Team |  | 
-| **Roshan Jose** | 221499484 | Postgrad | Senior | Dev Team |  |
 | **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | 
-| **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | 
+
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | 
 | **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
-| **Mariam Kassar** | 220234902 | Undergrad | Senior | Cyber Security |  | 
 | **Izaz Ishaque** | 221005704 | Postgrad | Senior | Cyber Security | Yes |  
+| **Mariam Kassar** | 220234902 | Undergrad | Senior | Cyber Security |  | 
+| **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  |
+| **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | 
 | **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  |  
 | **Zachary Max Kein** | 220277143 | Undergrad | Senior | Cyber Security |  |
 | **Antony Raju** | 221471405 | Postgrad | Senior | Cyber Security |  |
+| **Amal Paul** | 222197619 | Postgrad | Senior | Cyber Security | |
 
 
 
@@ -384,8 +389,9 @@ Overall, reducing awkwardness on the website and providing a smooth experience i
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | 
 | :-- | :-- | :-: | :-: | :-: | :-: | 
-| **Janvi Gupta** | 221220324 | Undergrad | Senior | Project Lead, Board | Yes | 
+| **Janvi Gupta** | 221220324 | Undergrad | Senior | Project Lead | Yes | 
 | **Navin Dharmarajan** | 222475715 | Post Grad | Junior | Dev Team | Yes | 
+| **Mayank Verma** | 219400263 | Undergrad | Senior | Dev Team | Yes | 
 | **Davinderjit Singh** | 219606745 | Undergrad | Junior | Dev Team |  | 
 | **Antony Raju** | 221471405 | Post Grad | Junior | Dev Team |  | 
 | **Bhavika Sood** | 218529556 | Undergrad | Junior | Dev Team |  |  
@@ -397,7 +403,6 @@ Overall, reducing awkwardness on the website and providing a smooth experience i
 | **Aye Moh Moh Shwe** | 220462239 | Undergrad | Senior | Dev Team |  |
 | **Jiankun Wang** | 221092755 | Undergrad | Senior | Dev Team |  |
 | **Mathew Ho** | 220271708 | Undergrad | Senior | Dev Team |  |
-| **Mayank Verma** | 219400263 | Undergrad | Senior | Dev Team | Yes | 
 | **Qiushi Huang** | 221456822 | Undergrad | Senior | Dev Team |  |
 | **Regan Tam** | 219488177 | Undergrad | Senior | Dev Team |  | 
 | **Thomas Koutsaplis** | 220233577 | Undergrad | Senior | Dev Team |  | 
