Update 2.1P Chameleon T2_2023.md
Chameleon new leadership personnel update

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -122,34 +122,36 @@ The Chameleon Website aims to accumulate all the information about the Chameleon
 
 **Acting Director:** Azadeh Ghari Neiat.
 
-**Company Board:** Azadeh Ghari Neiat,Jon Suwannakoot, Barry Chen, Yesini Charithma Liyanage, Jordan Sam Cooke.
+**Company Board:** Azadeh Ghari Neiat,Jon Suwannakoot, Barry Chen, Mollie Fernandez, Yesini Charithma Liyanage, Jordan Sam Cooke
 
 <h4 style="color:#336699; text-align:left;">EV Adoption Tools</h4>
 <b>Group Project Lead:</b> Yesini Charithma Liyanage & Jordan Sam Cooke
 
 EV Charger Forecasting & Location Optimisation (_sub project 1)_
 - Sub Project Lead: Yesini Charithma Liyanage
-- Web Dev Lead: Jamie Connor Davidson
-- Data Science Lead: Mark Premier
+- Web Dev Lead: Mark Premier
+- Data Science Lead: Jamie Connor Davidson
+- Web Dev Co-lead: Ishika Khanna
+- Data Science Co-Lead: Jennifer Yau 
 
 Evoleon Mobile Application (_sub project 2_)
-- Sub Project Lead: Jordan Sam Cooke
-- App Dev Lead: Aanan Abdullah & Joel Murphy-Dyer
+- Sub Project Lead: Joel Murphy-Dyer  
+- App Dev Lead: Aanan Abdullah
 
 
 <h4 style="color:#336699; text-align:left;">Melbourne Open Data</h4>
 <b>Project Lead:</b> Barry Chen & Mollie Fernandez
 
-- Data Science Leads: Vaibhav Kashyap, SimranJit Singh, Yash Krupanand Daware, Keefe Euler Alpay
-- Web Development Lead: Jiahao Pen
-- Security Team Lead: Izaz Ishaque & Amby Sarrazin
+- Data Science Leads:Shanuk Julian Devamulla,Keefe Euler Alpay, Vaibhav Kashyap, SimranJit Singh, Yash Krupanand Daware 
+- Web Development Lead: Jiahao Pen, Yashika Arora
+- Security Team Lead: Izaz Ishaque , Amby Sarrazin, Michael Wei Zhang
 
 <h4 style="color:#336699; text-align:left;">Chameleon Website</h4>
 <b>Project Lead:</b> Jon Suwannakoot
 
-- Web Development Lead: Davinderjit Singh, AYUSH KUMAR Som, Aaron James Vandersluys
-- Design Team Lead: Jon Suwannakoot
-- Assistant Design Lead: Brodie McCann
+- Web Development Lead: Navin Dharamrajan, Mayank Verma
+- Design Team Lead: Zak Constable 
+- Assistant Design Lead: Jon Suwannakoot 
 
 <br>
 <br>
